--- a/package.json
+++ b/package.json
@@ -1,44 +1,49 @@
 {
-  "name": "awesome-container-company",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emailjs/browser": "^3.4.0",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^6.2.8",
-    "react": "^17.0.2",
-    "react-compare-slider": "^2.2.0",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.28.1",
-    "react-router-dom": "^6.2.2",
-    "react-router-hash-link": "^2.4.3",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "awesome-container-company",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "https://glebkas.github.io/awesome-container-company",
+
+    "dependencies": {
+        "@emailjs/browser": "^3.4.0",
+        "@testing-library/jest-dom": "^5.16.3",
+        "@testing-library/react": "^12.1.4",
+        "@testing-library/user-event": "^13.5.0",
+        "framer-motion": "^6.2.8",
+        "gh-pages": "^3.2.3",
+        "react": "^17.0.2",
+        "react-compare-slider": "^2.2.0",
+        "react-dom": "^17.0.2",
+        "react-hook-form": "^7.28.1",
+        "react-router-dom": "^6.2.2",
+        "react-router-hash-link": "^2.4.3",
+        "react-scripts": "5.0.0",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
